<resources>
    <string name="app_name">DB FAM</string>
    <string name="app_name_zh">固 定 資 產 管 家</string>
    <string name="app_version">v1.0.1.190904_Alpha</string>
    <string name="upload_tips">Successfully saved to local, please upload to server later.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="initial_reader">Initializing reader. Please wait.</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="companyid_empty">Empty Company ID</string>
    <string name="host_address_empty">Empty Host Address</string>
    <string name="account_empty">Empty User Id</string>
    <string name="password_empty">Empty Password</string>
    <string name="username_not_exist">Username not exists</string>
    <string name="record_exists">This Barcode has an existing record, overwrite?</string>
    <string name="incorrect_credential">Incorrect Credential</string>
    <string name="success">Success</string>
    <string name="write_epc_succes">Write Tag successfully</string>
    <string name="write_epc_fail">Write Tag Fail, please try again</string>
    <string name="invalid_prefix">Prefix requires 2 digit</string>
    <string name="borrow_success">Borrow Success</string>
    <string name="disposal_success">Disposal Success</string>
    <string name="success_binding">Successfully binding to a new EPC</string>
    <string name="return_success">Return Success</string>
    <string name="binding_fail">Fail to bind</string>
    <string name="fail">Fail</string>
    <string name="lend_some">borrowed x items</string>
    <string name="return_some">returned x items</string>
    <string name="disposal_some">disposal x items</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="user_list_downloaded">User Lists data downloaded successfully</string>
    <string name="asset_list_downloaded">Asset List downloaded successfully</string>
    <string name="registration_list_downloaded">Registration List downloaded successfully</string>
    <string name="borrow_list_downloaded">Borrow List downloaded successfully</string>
    <string name="stock_take_list_downloaded">Stock Take List downloaded successfully</string>
    <string name="disposal_list_downloaded">Disposal List downloaded successfully</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_fail">Upload Fail</string>
    <string name="no_info_to_upload">No data to upload.</string>
    <string name="back">Back</string>
    <string name="host_address">Host</string>
    <string name="company_id">Company ID</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="t_chinese">繁體中文</string>
    <string name="s_chinese">简体中文</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="borrow_list">Borrow List</string>
    <string name="disposal_list">Disposal List</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">SEARCH</string>
    <string name="registration">REGISTRATION</string>
    <string name="receive_deposit">RECEIVE/DEPOSIT</string>
    <string name="receive">RECEIVE</string>
    <string name="deposit">DEPOSIT</string>
    <string name="borrow">BORROW</string>
    <string name="return_string">RETURN</string>
    <string name="stock_take">STOCK TAKE</string>
    <string name="disposal">DISPOSAL</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="download">Download</string>
    <string name="download_all">Download All</string>
    <string name="upload_all">Upload All</string>
    <string name="no_data_for_upload">No data for upload</string>
    <string name="no_data">No Data</string>
    <string name="upload">Upload</string>
    <string name="logout">LOGOUT</string>
    <string name="user_list">User List</string>
    <string name="asset_list">Asset List</string>
    <string name="registration_list">Registration List</string>
    <string name="register_epc_request">Register EPC</string>
    <string name="change_epc_request">Change EPC</string>
    <string name="stock_take_list">Stock Take List</string>
    <string name="return_list">Return list</string>
    <string name="download_success">Download Success</string>
    <string name="bind">Binded</string>
    <string name="unbind">Unbinded</string>
    <string name="in_library">In Library</string>
    <string name="borrowed">Borrowed</string>
    <string name="disposed">Disposed</string>
    <string name="disposed_item">Disposed Items</string>
    <string name="full_list">Full list</string>
    <string name="found">Found</string>
    <string name="missing">Missing</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="no_location_selected">No Location Selected</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="return_to_location">Return to Location</string>
    <string name="epc">EPC</string>
    <string name="cert_status">Cert Status</string>
    <string name="new_epc">New EPC</string>
    <string name="overdue">Overdue</string>
    <string name="return_date">Return Date</string>
    <string name="no_result">No Result</string>
    <string name="result">Result</string>
    <string name="search_result">Search Result</string>
    <string name="binding_result">Successfully register x items, successfully change y items.</string>
    <string name="cancel">Cancel</string>
    <string name="asset_information">Asset Information</string>
    <string name="financial_information">Financial Inforamtion</string>
    <string name="tag_information">Tag Information</string>
    <string name="cert_information">Cert Information</string>
    <string name="assetno">Asset No</string>
    <string name="assetname">Asset Name</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="bind_to">Bind To</string>
    <string name="change_epc">Change EPC</string>
    <string name="epc_already_exist">EPC already exist</string>
    <string name="remark">Remark</string>
    <string name="status">Status</string>
    <string name="serial_number">Serial No.</string>
    <string name="unit">Unit</string>
    <string name="last_stock_date">Last Stock Date</string>
    <string name="created_by">Created By</string>
    <string name="create_date">Create Date</string>
    <string name="holder">Holder</string>
    <string name="group">Group</string>
    <string name="source">Source</string>
    <string name="witness">Witness</string>
    <string name="prosecution_no">Prev Asset No.</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="invoice_voucher_date">Invoice/Voucher Date</string>
    <string name="invoice_voucher_no">Invoice/Voucher No.</string>
    <string name="funding_source">Funding Source</string>
    <string name="supplier">Supplier</string>
    <string name="maintenance_date">Maintenance Date</string>
    <string name="cost">Cost</string>
    <string name="practical_value">Practical Value</string>
    <string name="estimated_lifetime_month">Estimated Lifetime Month</string>
    <string name="type_of_tag">Type of Tag</string>
    <string name="barcode">Barcode</string>
    <string name="cert_url">Cert Url</string>
    <string name="start">Start</string>
    <string name="scan">Scan</string>
    <string name="scan_rfid">RFID</string>
    <string name="stop">stop</string>
    <string name="old_epc">Original EPC</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_deleting">Confirm deleting</string>
    <string name="valid_day">Valid Day</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="applied">Applied</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="Abnormal">Abnormal</string>
    <string name="new_string">New</string>
    <string name="processing">Processing</string>
    <string name="expired">Expired</string>
    <string name="apply_date">Apply Date</string>
    <string name="approval_date">Approval Date</string>
    <string name="approved_by">Approved By</string>
    <string name="valid_date">Valid Date</string>
    <string name="borrow_from">Borrowed From</string>
    <string name="borrowed_item">Borrowed Items</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="progress">Progress</string>
    <string name="last_update">Last Update</string>
    <string name="waiting_list">Waiting List</string>
    <string name="abnormal">Abnormal</string>
    <string name="asset_number">Asset Number</string>
    <string name="error_bluetooth_connection_failed">Unable to connect device</string>
    <string name="toast_ble_connected">BLE is connected</string>
    <string name="bluetooth_is_not_connected">BLE is not connected</string>
    <string name="rfid_is_not_ready">RFID is not ready</string>
    <string name="app_ime">CS108 Java Wedge</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="photo">Photo</string>
    <string name="title_activity_home">Convergence Systems</string>
    <string name="title_activity_connection">Connect</string>
    <string name="title_activity_filters">Filters</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_readwrite">Read / Write</string>
    <string name="title_activity_registertag">Register tag</string>
    <string name="title_activity_special">Special Functions</string>
    <string name="title_activity_geiger">Geiger search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_security">Security</string>
    <string-array name="access_lock_privilege_array">
        <item>Unchanged</item>
        <item>Unlock</item>
        <item>Permanent Unlock</item>
        <item>Lock</item>
        <item>Permanent Lock</item>
    </string-array>
    <string-array name="memoryBank_options">
        <item>Reser</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="read_memoryBank_options">
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="dataType_options">
        <item>Hex</item>
        <item>Bit</item>
    </string-array>
    <string-array name="write_memoryBank_options">
        <item>EPC</item>
        <item>User</item>
    </string-array>
    <string name="settingAntennaPower_title">Antenna power(0-32)</string>
    <string name="select_unit">Select Unit : </string>
    <string name="welcome">Welcome to E-AMS</string>
    <string name="prefix">Prefix</string>
</resources>