<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@color/ams_grey"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="250dp">

        <TextView
            android:text="@string/welcome"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="5dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/select_unit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:layout_margin="5dp"
            android:id="@+id/unit_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/start"
            android:layout_margin="5dp"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_width="200dp"
            android:layout_height="40dp"/>


        <TextView
            android:id="@+id/app_version"
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>