<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_toolbar" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TabItem
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/applied"/>

        <android.support.design.widget.TabItem
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/approved"/>

        <android.support.design.widget.TabItem
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/rejected"/>

    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v4.widget.SwipeRefreshLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/no_result"
            android:text="@string/no_result"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>