<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_gravity="left"
            android:gravity="center|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/colorPrimary"
                android:src="@drawable/back_arrow"
                android:layout_height="30dp"
                android:layout_width="30dp" />
            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_logo"
                android:layout_margin="10dp"
                android:layout_centerInParent="true"
                android:layout_height="80dp"
                android:layout_width="80dp" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:text="@string/app_name_zh"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:textColor="@color/colorPrimary"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/textfield_background"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/language"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="#00000000"
                android:text="@string/chinese"
                android:textColor="@color/ams_grey_border"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:tint="@color/ams_grey_border"
                android:src="@drawable/language_setting"
                android:layout_margin="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/host_address"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:textSize="20sp"
            android:padding="10dp"
            android:hint="@string/host_address"
            android:layout_marginBottom="20dp"
            android:textColor="@color/ams_grey_border"
            android:background="@drawable/textfield_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/company_id"
            android:textSize="20sp"
            android:padding="10dp"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/company_id"
            android:textColor="@color/ams_grey_border"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textfield_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:maxLength="2"
            android:id="@+id/prefix"
            android:textSize="20sp"
            android:padding="10dp"
            android:lines="1"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:hint="@string/prefix"
            android:textColor="@color/ams_grey_border"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textfield_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>