<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/fragment_inventory_rfid_multi"/>

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/st_back"
                android:layout_margin="10dp"
                android:tint="@android:color/white"
                android:src="@drawable/back_arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="22sp"
                android:padding="15dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingPrefix" />

            <ImageView
                android:id="@+id/menu"
                android:layout_margin="10dp"
                android:tint="@android:color/white"
                android:src="@drawable/menu"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </LinearLayout>
        <include
            android:id="@+id/search_bar"
            layout="@layout/layout_searchbar_with_qrscan"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:background="@color/ams_grey"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.design.widget.TabItem
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/full_list"/>

            <android.support.design.widget.TabItem
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/found"/>

            <android.support.design.widget.TabItem
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/missing"/>

            <android.support.design.widget.TabItem
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/abnormal"/>

        </android.support.design.widget.TabLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ListView
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:divider="@null"
                android:id="@+id/rfidlistview"
                android:layout_width="200dp"
                android:layout_height="200dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:divider="@null"
                    tools:listitem="@layout/search_listview_cell" />

                <ImageView
                    android:visibility="gone"
                    android:background="@android:color/white"
                    android:src="@drawable/door_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <!--
            <ListView
                android:layout_marginTop="5dp"
                android:divider="@null"
                tools:listitem="@layout/search_listview_cell"
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    -->
            <TextView
                android:visibility="gone"
                android:id="@+id/no_result"
                android:text="@string/no_result"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/start"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/start"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp"/>
            <Button
                android:id="@+id/confirm"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/blocking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/save_progress"
        android:visibility="gone"
        android:background="#80000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_margin="15dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:max="100"
            android:progress="0"/>
    </RelativeLayout>
</RelativeLayout>